--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 	</div>
 
 	<!-- schedule -->
-	<div class="container-fluid bg-schedule background-secondary" id="schedule">
+	<div class="container-fluid background-secondary" id="schedule">
 		<div class="content-container-smaller">
 			<h1 class="text-center">SCHEDULE</h1>
 			<table class="table table-hover-dark" style="color:#ffffff;">
@@ -321,19 +321,35 @@
 	</div>
 
 	<!--sponsor logos-->
-	<!-- <div class="container-fluid background-primary text-center" id="sponsor">
+	<div class="container-fluid background-primary text-center" id="sponsor">
 		<h1 class="text-center">Sponsors</h1>
 		<div class="row">
-			<div class="col">
-				<img class="sponsor-gold" src="images/sponsor/ppg.svg">
+			<div class="col-sm-3"></div>
+			<div class="col-sm-6">
+				<a href="https://www.uber.com/info/atg/" target="_blank"><img class="img-scalable clickable sponsor-image" style="width: 100%" src="images/sponsor/uber.svg"></a>
 			</div>
+			<div class="col-sm-3"></div>
 		</div>
 		<div class="row">
-			<div class="col">
-				<img src="sponsor-silver">
+			<div class="col-sm-3"></div>
+			<div class="col-sm-6">
+				<a href="https://ppg.com" target="_blank"><img class="img-scalable clickable sponsor-image" style="width: 100%" src="images/sponsor/ppg.svg"></a>
 			</div>
+			<div class="col-sm-3"></div>
 		</div>
-	</div> -->
+		<div class="row">
+			<div class="col-sm-3"></div>
+			<div class="col-sm-6">
+				<div class="col-sm-8">
+					<a href="https://bnymellon.com" target="_blank"><img class="img-scalable clickable sponsor-image" style="width: 100%" src="images/sponsor/bnymellon.svg"></a>
+				</div>
+				<div class="col-sm-4">
+					<a href="https://www.jimmyjohns.com/" target="_blank"><img class="img-scalable clickable sponsor-image" style="width: 100%; max-width: 275px;" src="images/sponsor/jimmyjohns.svg"></a>
+				</div>
+			</div>
+			<div class="col-sm-3"></div>
+		</div>
+	</div>
 
 	<!-- sponsor ship information -->
 	<div class="container-fluid text-center bg-sponsor background-secondary">
@@ -350,7 +366,7 @@
 			<h1 class="text-center">ABOUT US</h1>
 			<div class="row">
 				<div class="col-sm-6">
-					<img class="staff-image img-scalable clickable" src="images/akshathjain.jpg" onclick="window.location.assign('http://akshathjain.com')">
+					<a href="http://akshathjain.com" target="_blank"><img class="staff-image img-scalable clickable" src="images/akshathjain.jpg"></a>
 					<h3><b>Akshath Jain</b></h3>
 					<p>Co-Founder / Organizer</p>
 				</div>
