--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
 	<!--sponsor logos-->
 	<div class="container-fluid background-primary text-center" id="sponsor">
-		<h1 class="text-center">Sponsors</h1>
+		<h1 class="text-center">SPONSORS</h1>
 		<div class="row">
 			<div class="col-sm-3"></div>
 			<div class="col-sm-6">
