--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<li><a href="#info">General Info</a></li>
 					<li><a href="#faq">FAQ</a></li>
 					<li><a href="#schedule">Schedule</a></li>
-					<li><a href="#sponsor">Sponsor</a></li>
+					<li><a href="#sponsor">Sponsors</a></li>
 					<li><a href="#about">About</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</div>
