--- a/index.html
+++ b/index.html
@@ -119,10 +119,11 @@
 						<div class="table-cell card">
 							<h3><b>What if I don't know how to code?</b></h3>
 							<p>That's not a problem! Your experience doesn't matter for you to be successful at a hackathon. We're passionate about making our hackathons very welcoming and beginner-friendly, which is why we're also going to be providing optional workshops throughout the day to help you get started if you need it.</p>
-						</div><div class="table-cell card">
+						</div>
+						<div class="table-cell card">
 							<h3><b>How do I sign up?</b></h3>
 							<p>You can sign up by clicking the sign up button on the home page or the one below. Remember to share the link with friends to get them involved as well!</p>
-							<a class="btn-custom" href="https://goo.gl/forms/x6iOkU71a8G8JEi63">SIGN UP</a>
+							<a class="btn-custom button-bottom" href="https://goo.gl/forms/x6iOkU71a8G8JEi63">SIGN UP</a>
 						</div>
 					</div>
 					<div class="table-row">
@@ -397,9 +398,9 @@
 						<br>
 						<br>
 						<br>
-						<a href="https://www.facebook.com/hacknorthallegheny"><img class="social-media-icons" src="images/facebook.png"></a>&nbsp;&nbsp;&nbsp;
-						<a href="https://twitter.com/"><img class="social-media-icons" src="images/twitter.png"></a>&nbsp;&nbsp;&nbsp;
-						<a href="https://instagram.com/"><img class="social-media-icons" src="images/instagram.png"></a>
+						<a href="https://www.facebook.com/hacknorthallegheny"><img class="clickable social-media-icons" src="images/facebook.png"></a>&nbsp;&nbsp;&nbsp;
+						<a href="https://twitter.com/"><img class="clickable social-media-icons" src="images/twitter.png"></a>&nbsp;&nbsp;&nbsp;
+						<a href="https://instagram.com/"><img class="clickable social-media-icons" src="images/instagram.png"></a>
 					</p>
 				</div>
 				<div class="col-sm-4"></div>
