--- a/index.html
+++ b/index.html
@@ -352,6 +352,17 @@
 			</div>
 			<div class="col-sm-3"></div>
 		</div>
+		<div class="row">
+			<div class="col-sm-3"></div>
+			<div class="col-sm-6">
+				<div class="col-sm-2"></div>
+				<div class="col-sm-8">
+					<a href="https://montecellos.com" target="_blank"><img class="img-scalable clickable sponsor-image" style="width: 100%" src="images/sponsor/montecellos.png"></a>
+				</div>
+				<div class="col-sm-2"></div>
+			</div>
+			<div class="col-sm-3"></div>
+		</div>
 	</div>
 
 	<!-- sponsor ship information -->
