added uber information to schedule

--- a/index.html
+++ b/index.html
@@ -261,12 +261,17 @@
 					<tr>
 						<td><b>8:15am <br> to <br> 8:45am</b></td>
 						<td>Opening Ceremony and Kickoff</td>
-						<td></td>
+						<td>We'll be going over all the basics of HackNA and revealing our theme! Our opening speaker is going to be Bryan Nagy, an Engineering Manager at <a href="https://www.uber.com/info/atg/" target="_blank" class="link-light">Uber Advanced Technologies Group</a>. He's going to be showcasing how Uber's self-driving lydar technology works!</td>
 					</tr>
 					<tr>
 						<td><b>8:45am</b></td>
 						<td>Hacking Begins!</td>
 						<td></td>
+					</tr>
+					<tr>
+						<td><b>8:45am</b></td>
+						<td>Uber Self-Driving Car Expo!</td>
+						<td>Take a tour around one of Uber's Self Driving Cars! Located in the front parking lot. The car will be leaving at 11:00am: we highly recommend that you try to see it!</td>
 					</tr>
 					<tr>
 						<td><b>8:45am<br> to <br> 9:00am</b></td>
@@ -282,6 +287,11 @@
 						<td><b>10:00am<br> to <br>11:00am</b></td>
 						<td>Workshop: Introduction to Electronics and Robotics</td>
 						<td><i>(Optional)&nbsp;&nbsp;</i>We'll be going over everything you need to build a robot!</td>
+					</tr>
+					<tr>
+						<td><b>11:00am</b></td>
+						<td>Uber Self Driving Car Leaves</td>
+						<td></td>
 					</tr>
 					<tr>
 						<td><b>11:00am<br> to <br>12:00pm</b></td>
