--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 					</tr>
 					<tr>
 						<td><b>11:00am</b></td>
-						<td>Uber Self Driving Car Leaves</td>
+						<td>Uber Self-Driving Car Leaves</td>
 						<td></td>
 					</tr>
 					<tr>
