--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 					<tr>
 						<td><b>8:15am <br> to <br> 8:45am</b></td>
 						<td>Opening Ceremony and Kickoff</td>
-						<td>We'll be going over all the basics of HackNA and revealing our theme! Our opening speaker is going to be Bryan Nagy, an Engineering Manager at <a href="https://www.uber.com/info/atg/" target="_blank" class="link-light">Uber Advanced Technologies Group</a>. He's going to be showcasing how Uber's self-driving lydar technology works!</td>
+						<td>We'll be going over all the basics of HackNA and revealing our theme! Our opening speaker is Bryan Nagy, an Engineering Manager at <a href="https://www.uber.com/info/atg/" target="_blank" class="link-light">Uber Advanced Technologies Group</a>. He's going to be showcasing how Uber's self-driving lydar technology works!</td>
 					</tr>
 					<tr>
 						<td><b>8:45am</b></td>
