--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					<div class="table-row">
 						<div class="table-cell card">
 							<h3><b>Is there a registration deadline?</b></h3>
-							<p>We ask that all registrations be in by December 13 at midnight. This gives us enough time to prepare accordingly and ensure that enough food is ordered.</p>
+							<p>We ask that all registrations be in by December 13 at 11:59pm. This gives us enough time to prepare accordingly and ensure that enough food is ordered.</p>
 						</div>
 						<div class="table-cell card">
 							<h3><b>Who can participate?</b></h3>
