--- a/future/index.html
+++ b/future/index.html
@@ -48,7 +48,7 @@
 			</div>
 			<div class="collapse navbar-collapse" id="mainNav" style="border-top: 0px;">
 				<div class="nav navbar-nav navbar-right">
-					<li><a href="../2017/index.html">2017 Website</a></li>
+					<li><a href="../2017/">2017 Website</a></li>
 				</div>
 			</div>
 		</div>
