updated clock font

--- a/future/index.html
+++ b/future/index.html
@@ -58,7 +58,7 @@
 	<div class="container-fluid text-center bg-home" id="home">
 		<div class="container-fluid text-center bg-home-text">
 			<h1>HackNA Will Return</h1>
-			<div class="row countdown-width">
+			<div class="row countdown-width" style="font-family: 'Inconsolata', monospace">
 				<div class="col-sm-3 countdown-fill">
 					<p class="countdown-time" id="countdown-days">--</p>
 					<p class="countdown-label">Days</p>
