added link to minihacks on website homepage

--- a/future/index.html
+++ b/future/index.html
@@ -50,6 +50,9 @@
 				<div class="nav navbar-nav navbar-right">
 					<li><a href="../2017/">2017 Website</a></li>
 				</div>
+				<div class="nav navbar-nav navbar-right">
+					<li><a href="../minihacks/2018workshop.html">MiniHacks 2018</a></li>
+				</div>
 			</div>
 		</div>
 	</nav>
