--- a/future/index.html
+++ b/future/index.html
@@ -51,7 +51,7 @@
 					<li><a href="../2017/">2017 Website</a></li>
 				</div>
 				<div class="nav navbar-nav navbar-right">
-					<li><a href="../minihacks/2018workshops.html">MiniHacks 2018</a></li>
+					<li><a href="../minihacks/2018workshop.html">MiniHacks 2018</a></li>
 				</div>
 			</div>
 		</div>
