Added 2018 Site link to Futre page

--- a/future/index.html
+++ b/future/index.html
@@ -48,6 +48,9 @@
 			</div>
 			<div class="collapse navbar-collapse" id="mainNav" style="border-top: 0px;">
 				<div class="nav navbar-nav navbar-right">
+					<li><a href="../2018/">2018 Website</a></li>
+				</div>
+				<div class="nav navbar-nav navbar-right">
 					<li><a href="../2017/">2017 Website</a></li>
 				</div>
 				<div class="nav navbar-nav navbar-right">
