updated an error in future redirect to minihacks2018

--- a/future/index.html
+++ b/future/index.html
@@ -49,7 +49,7 @@
 			<div class="collapse navbar-collapse" id="mainNav" style="border-top: 0px;">
 				<div class="nav navbar-nav navbar-right">
 					<li><a href="../2017/">2017 Website</a></li>
-					<li><a href="../minihacks/2018workshop.html">MiniHacks 2018</a></li>
+					<li><a href="../minihacks/2018workshops.html">MiniHacks 2018</a></li>
 					<li><a href="../2019/">2019 Website</a></li>
 				</div>
 			</div>
