--- a/future/index.html
+++ b/future/index.html
@@ -48,8 +48,9 @@
 			</div>
 			<div class="collapse navbar-collapse" id="mainNav" style="border-top: 0px;">
 				<div class="nav navbar-nav navbar-right">
-					<li><a href="../2017/">2017 Website</a></li>
+					<li><a href="../minihacks/2018workshops.html">HackNA 2019</a></li>
 					<li><a href="../minihacks/2018workshops.html">MiniHacks 2018</a></li>
+					<li><a href="../2017/">HackNA 2017</a></li>
 				</div>
 			</div>
 		</div>
