Revert "Merge remote-tracking branch 'refs/remotes/origin/uncompleted-work'"
This reverts commit 722cceb2dd933aa8eb0e04c27ca5122108e6e09e, reversing
changes made to c63195ebaccc46dd4d033486e532f1b04781a28c.

--- a/future/index.html
+++ b/future/index.html
@@ -48,7 +48,7 @@
 			</div>
 			<div class="collapse navbar-collapse" id="mainNav" style="border-top: 0px;">
 				<div class="nav navbar-nav navbar-right">
-					<li><a href="../2019/">HackNA 2019</a></li>
+					<li><a href="../minihacks/2018workshops.html">HackNA 2019</a></li>
 					<li><a href="../minihacks/2018workshops.html">MiniHacks 2018</a></li>
 					<li><a href="../2017/">HackNA 2017</a></li>
 				</div>
