--- a/future/index.html
+++ b/future/index.html
@@ -79,7 +79,7 @@
 					<p class="countdown-label">Seconds</p>
 				</div>
 			</div>
-			<h2>Will return on January 5th, 2019</h2>
+			<h2>January 5th, 2019</h2>
 		</div>
 	</div>
 </body>
