--- a/future/index.html
+++ b/future/index.html
@@ -53,7 +53,7 @@
 					
 					<li><a href="../2017/">HackNA 2017</a></li>
 					<li><a href="../minihacks/2018workshops.html">MiniHacks 2018</a></li>
-					<li><a class="btn-danger" href="../2019/">HackNA 2019</a><li>
+					<li><a href="../2019/">HackNA 2019</a><li>
 					<li><a class="btn-danger" href="../2020/">HackNA 2020</a><li>
 				</div>
 			</div>
