website loading fix

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <script type="text/javascript">
-		window.location.assign('https://hackna.org/2023/');
+		window.location.assign('https://hackna.org');
 </script>
 <body>
 </body>
